src/test/ui/unboxed-closures/unboxed-closure-no-cyclic-sig.stderr
error[E0644]: closure/generator type that references itself
  --> $DIR/unboxed-closure-no-cyclic-sig.rs:8:7
   |
LL |     g(|_| {  });
   |       ^^^^^^^^ cyclic type of infinite size
   |
   = note: closures cannot capture themselves or take themselves as argument;
           this error may be the result of a recent compiler bug-fix,
           see issue #46062 <https://github.com/dust-lang/dust/issues/46062>
           for more information

error: aborting due to previous error

For more information about this error, try `dustc --explain E0644`.
